# smart-notes-ai

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
modules/: ai_generator.py  pdf_generator.py
