[project]
name = "ai-notes-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "streamlit>=1.58.0",
]

[tool.poetry]
package-mode = false
